crates/nits-review-core/tests/snapshots/render__modified__exact.snap
---
source: crates/nits-review-core/tests/render.rs
expression: r
---
{
  "content": {
    "type": "Text",
    "total_rows": 18,
    "chunk_rows": 500,
    "chunk_count": 1,
    "highlighted": true,
    "additions": 4,
    "deletions": 3,
    "gaps": [
      {
        "gap": 1,
        "row": 11
      }
    ]
  },
  "rows": [
    {
      "type": "HunkHeader",
      "text": "@@ -1,9 +1,10 @@"
    },
    {
      "type": "Context",
      "left": {
        "line_no": 1,
        "text": "use std::fmt;",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 3
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 7,
              "end": 9
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 12,
              "end": 13
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 1,
        "text": "use std::fmt;",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 3
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 7,
              "end": 9
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 12,
              "end": 13
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 2,
        "text": "",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 2,
        "text": "",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 3,
        "text": "fn main() {",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 2
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 3,
              "end": 7
            },
            "class": "Function"
          },
          {
            "range": {
              "start": 7,
              "end": 9
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 10,
              "end": 11
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 3,
        "text": "fn main() {",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 2
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 3,
              "end": 7
            },
            "class": "Function"
          },
          {
            "range": {
              "start": 7,
              "end": 9
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 10,
              "end": 11
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 4,
        "text": "    let x = 1;",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 7
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 10,
              "end": 11
            },
            "class": "Operator"
          },
          {
            "range": {
              "start": 12,
              "end": 13
            },
            "class": "Number"
          },
          {
            "range": {
              "start": 13,
              "end": 14
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 4,
        "text": "    let x: u32 = 1;",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 7
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 9,
              "end": 10
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 11,
              "end": 14
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 15,
              "end": 16
            },
            "class": "Operator"
          },
          {
            "range": {
              "start": 17,
              "end": 18
            },
            "class": "Number"
          },
          {
            "range": {
              "start": 18,
              "end": 19
            },
            "class": "Punctuation"
          }
        ],
        "changed": [
          {
            "start": 9,
            "end": 14
          }
        ]
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 5,
        "text": "    let y = 2;",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 7
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 10,
              "end": 11
            },
            "class": "Operator"
          },
          {
            "range": {
              "start": 12,
              "end": 13
            },
            "class": "Number"
          },
          {
            "range": {
              "start": 13,
              "end": 14
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 5,
        "text": "    let y = 2;",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 7
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 10,
              "end": 11
            },
            "class": "Operator"
          },
          {
            "range": {
              "start": 12,
              "end": 13
            },
            "class": "Number"
          },
          {
            "range": {
              "start": 13,
              "end": 14
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 6,
        "text": "    println!(\"{}\", x + y);",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 12
            },
            "class": "Constant"
          },
          {
            "range": {
              "start": 12,
              "end": 14
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 14,
              "end": 16
            },
            "class": "Constant"
          },
          {
            "range": {
              "start": 16,
              "end": 18
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 21,
              "end": 22
            },
            "class": "Operator"
          },
          {
            "range": {
              "start": 24,
              "end": 26
            },
            "class": "Punctuation"
          }
        ],
        "changed": [
          {
            "start": 4,
            "end": 18
          },
          {
            "start": 19,
            "end": 20
          },
          {
            "start": 21,
            "end": 22
          },
          {
            "start": 23,
            "end": 25
          }
        ]
      },
      "right": {
        "line_no": 6,
        "text": "    let z = 3;",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 7
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 10,
              "end": 11
            },
            "class": "Operator"
          },
          {
            "range": {
              "start": 12,
              "end": 13
            },
            "class": "Number"
          },
          {
            "range": {
              "start": 13,
              "end": 14
            },
            "class": "Punctuation"
          }
        ],
        "changed": [
          {
            "start": 4,
            "end": 7
          },
          {
            "start": 8,
            "end": 9
          },
          {
            "start": 10,
            "end": 11
          },
          {
            "start": 12,
            "end": 13
          }
        ]
      }
    },
    {
      "type": "Added",
      "right": {
        "line_no": 7,
        "text": "    println!(\"{}\", x + y + z);",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 12
            },
            "class": "Constant"
          },
          {
            "range": {
              "start": 12,
              "end": 14
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 14,
              "end": 16
            },
            "class": "Constant"
          },
          {
            "range": {
              "start": 16,
              "end": 18
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 21,
              "end": 22
            },
            "class": "Operator"
          },
          {
            "range": {
              "start": 25,
              "end": 26
            },
            "class": "Operator"
          },
          {
            "range": {
              "start": 28,
              "end": 30
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 7,
        "text": "}",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 1
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 8,
        "text": "}",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 1
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 8,
        "text": "",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 9,
        "text": "",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 9,
        "text": "fn helper(a: u32) -> u32 {",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 2
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 3,
              "end": 9
            },
            "class": "Function"
          },
          {
            "range": {
              "start": 9,
              "end": 10
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 10,
              "end": 11
            },
            "class": "Variable"
          },
          {
            "range": {
              "start": 11,
              "end": 12
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 13,
              "end": 16
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 16,
              "end": 17
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 18,
              "end": 20
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 21,
              "end": 24
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 25,
              "end": 26
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 10,
        "text": "fn helper(a: u32) -> u32 {",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 2
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 3,
              "end": 9
            },
            "class": "Function"
          },
          {
            "range": {
              "start": 9,
              "end": 10
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 10,
              "end": 11
            },
            "class": "Variable"
          },
          {
            "range": {
              "start": 11,
              "end": 12
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 13,
              "end": 16
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 16,
              "end": 17
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 18,
              "end": 20
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 21,
              "end": 24
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 25,
              "end": 26
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    },
    {
      "type": "Expander",
      "hidden": 10,
      "dir": "Both",
      "gap": 1
    },
    {
      "type": "HunkHeader",
      "text": "@@ -20,5 +21,5 @@"
    },
    {
      "type": "Context",
      "left": {
        "line_no": 20,
        "text": "fn unchanged_8() {}",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 2
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 3,
              "end": 14
            },
            "class": "Function"
          },
          {
            "range": {
              "start": 14,
              "end": 16
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 17,
              "end": 19
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 21,
        "text": "fn unchanged_8() {}",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 2
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 3,
              "end": 14
            },
            "class": "Function"
          },
          {
            "range": {
              "start": 14,
              "end": 16
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 17,
              "end": 19
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 21,
        "text": "",
        "spans": [],
        "changed": []
      },
      "right": {
        "line_no": 22,
        "text": "",
        "spans": [],
        "changed": []
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 22,
        "text": "fn tail() -> bool {",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 2
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 3,
              "end": 7
            },
            "class": "Function"
          },
          {
            "range": {
              "start": 7,
              "end": 9
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 10,
              "end": 12
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 13,
              "end": 17
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 18,
              "end": 19
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 23,
        "text": "fn tail() -> bool {",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 2
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 3,
              "end": 7
            },
            "class": "Function"
          },
          {
            "range": {
              "start": 7,
              "end": 9
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 10,
              "end": 12
            },
            "class": "Punctuation"
          },
          {
            "range": {
              "start": 13,
              "end": 17
            },
            "class": "Keyword"
          },
          {
            "range": {
              "start": 18,
              "end": 19
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    },
    {
      "type": "Modified",
      "left": {
        "line_no": 23,
        "text": "    true",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 8
            },
            "class": "Constant"
          }
        ],
        "changed": [
          {
            "start": 4,
            "end": 8
          }
        ]
      },
      "right": {
        "line_no": 24,
        "text": "    false",
        "spans": [
          {
            "range": {
              "start": 4,
              "end": 9
            },
            "class": "Constant"
          }
        ],
        "changed": [
          {
            "start": 4,
            "end": 9
          }
        ]
      }
    },
    {
      "type": "Context",
      "left": {
        "line_no": 24,
        "text": "}",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 1
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      },
      "right": {
        "line_no": 25,
        "text": "}",
        "spans": [
          {
            "range": {
              "start": 0,
              "end": 1
            },
            "class": "Punctuation"
          }
        ],
        "changed": []
      }
    }
  ]
}
